--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,7 @@ body {
 #dashboard {
     padding: 20px;
     margin-left: 75px;
-    position: absolute;
-    top: 10%;
+    margin-top: 10%;
 }
 
 
@@ -31,7 +30,6 @@ body {
     max-width: 65%; /* Maximum width of the bubble */
     max-height: 30%;
     margin: 20px; /* Margin around the bubble */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     font-family: 'Arial', sans-serif; /* Font styling */
 
     box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
