--- a/styles.css
+++ b/styles.css
@@ -15,38 +15,105 @@ body {
 #dashboard {
     padding: 20px;
     margin-left: 75px;
-    margin-top: 10%;
+    margin-top: 3%;
 }
+
+
 
 
 
 .greeting-bubble {
     display: flex;
-    background-color: #3a3b3c; /* Dark grey background */
+    background-color: #303131; /* Dark grey background */
     background-image: url("./images/airplane.png");
+    background-repeat: no-repeat;
+    background-position: -50px -20px;
+    background-size: 900px 350px;
     border-radius: 20px; /* Rounded corners */
     padding: 20px; /* Spacing inside the bubble */
     color: #ffffff; /* White text */
     max-width: 65%; /* Maximum width of the bubble */
-    max-height: 30%;
+    max-height: 40%;
+    width: 900px;
+    height: 200px;
     margin: 20px; /* Margin around the bubble */
     font-family: 'Arial', sans-serif; /* Font styling */
 
     box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
 }
 
-.greeting-bubble .last-visit-1 {
+.last-visit-1 {
     display: block;
     /* background-color: lightblue; */
     width: 200px;
     height: 100px;
 }
 
-.greeting-bubble .last-visit-2 {
-    /* background-color: lightgreen; */
+.last-visit-1 h1 {
+    padding-top: 20px;
+}
+
+#welcome {
+    padding-top: 20px;
+}
+
+.last-visit-2 {
     text-align: end;
     width: 700px;
     height: 100px;
+}
+
+.last-visit-2 {
+    padding-top: 50px;
+}
+
+.greeting-update {
+    display: inline-block;
+}
+
+
+
+
+
+.device-chart-box {
+    display: block;
+    background-color: #3a3b3c; /* Dark grey background */
+    background-image: url("./images/airplane.png");
+    border-radius: 20px; /* Rounded corners */
+    padding: 20px; /* Spacing inside the bubble */
+    color: #ffffff; /* White text */
+    max-width: 65%; /* Maximum width of the bubble */
+    max-height: 60%;
+    height: 60%;
+    margin: 20px;
+    margin-top: 40px; /* Margin around the bubble */
+    font-family: 'Arial', sans-serif; /* Font styling */
+
+    box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
+}
+
+.top-material {
+    display: flex;
+}
+
+.top-material h3 {
+    margin-right: 740px;
+}
+
+.bottom-material {
+    display: flex;
+}
+
+.legend {
+    padding-top: 100px;
+}
+
+.status-box {
+    padding-top: 20px;
+}
+
+.status-box p {
+    display: inline-block;
 }
 
 
