--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #333;
+    background-color: rgb(13, 0, 50);
     color: white;
     line-height: 1.6;
 }
@@ -15,7 +15,8 @@ body {
 #dashboard {
     padding: 20px;
     margin-left: 75px;
-    margin-top: 3%;
+    margin-top: 1%;
+    display: flex;
 }
 
 
@@ -58,9 +59,11 @@ button {
     color: #ffffff; /* White text */
     min-width: 900px; /* Maximum width of the bubble */
     min-height: 200px;
+    max-height: 200px;
     width: 65%;
     height: 40%;
-    margin: 20px; /* Margin around the bubble */
+    margin-left: 10px; /* Margin around the bubble */
+    margin-top: 2%;
     font-family: 'Arial', sans-serif; /* Font styling */
 
     box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
@@ -108,9 +111,10 @@ button {
     color: #ffffff; /* White text */
     min-width: 900px; /* Maximum width of the bubble */
     min-height: 450px;
+    max-height: 450px;
     width: 65%;
     height: 40%;
-    margin: 20px;
+    margin-left: 10px;
     margin-top: 40px; /* Margin around the bubble */
     font-family: 'Arial', sans-serif; /* Font styling */
 
@@ -151,6 +155,36 @@ button {
 
 
 
+.vertical-2 {
+    background-color: #303131; /* Dark grey background */
+    border-top-left-radius: 20px; /* Rounded corners */
+    padding: 20px; /* Spacing inside the bubble */
+    color: #ffffff; /* White text */
+
+    width: 400px;
+    height: auto;
+    margin-top: 20px; /* Margin around the bubble */
+    margin-left: -20px;
+    font-family: 'Arial', sans-serif; /* Font styling */
+
+    box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
+
+    height: 100%; /* Full height of the viewport */
+    position: fixed; /* Fixed position */
+    right: 0; /* Align to the left */
+    top: 7%; /* Align to the top */
+    overflow-y: auto; /* Scroll if content is bigger than the screen */
+}
+
+.user img {
+    height: 60px;
+    width: auto;
+}
+
+
+
+
+
 #sidebar {
     width: 75px; /* Width of the sidebar */
     background-color: #404040; /* Background color of the sidebar */
@@ -160,6 +194,8 @@ button {
     top: 10%; /* Align to the top */
     overflow-y: auto; /* Scroll if content is bigger than the screen */
     padding-top: 20px; /* Padding at the top */
+
+    border-top-right-radius: 20px;
 
     box-shadow: 0px 0px 20px 0px rgb(102, 0, 255);
 }
